build: ship kernel and initramfs
Snarf the kernel out of container /boot, and generate the initramfs
with dracut.

--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,8 +1,10 @@
 FROM centos-deploy-base
 
 RUN yum -y install \
+	kernel \
 	e2fsprogs \
 	squashfs-tools \
 	mkisofs \
 	syslinux \
+	dracut-network \
 	make
