--- a/Makefile.inner
+++ b/Makefile.inner
@@ -3,6 +3,7 @@
 include Makefile.common
 
 MNT_LOOP	:= /mnt/loop
+KVER		:= $(shell rpm -q --queryformat '%{EVR}.%{ARCH}' kernel)
 
 $(STAGE_DIR)/squash/LiveOS/ext3fs.img: $(STAGE_DIR)/fs.tar
 	mkdir -p $(MNT_LOOP)
@@ -23,7 +24,15 @@ $(STAGE_DIR)/cd/isolinux/isolinux.bin: /usr/share/syslinux/isolinux.bin
 	mkdir -p $(shell dirname $@)
 	cp -f $< $@
 
-$(STAGE_DIR)/cd.iso: $(STAGE_DIR)/cd/isolinux/isolinux.bin $(STAGE_DIR)/cd/LiveOS/squashfs.img
+$(STAGE_DIR)/cd/isolinux/vmlinuz: /boot/vmlinuz-$(KVER)
+	mkdir -p $(shell dirname $@)
+	cp -f $< $@
+
+$(STAGE_DIR)/cd/isolinux/initrd.img:
+	mkdir -p $(shell dirname $@)
+	dracut --kver $(KVER) --force --no-hostonly -v --add "dmsquash-live systemd network" "$@"
+
+$(STAGE_DIR)/cd.iso: $(STAGE_DIR)/cd/isolinux/isolinux.bin $(STAGE_DIR)/cd/LiveOS/squashfs.img $(STAGE_DIR)/cd/isolinux/vmlinuz $(STAGE_DIR)/cd/isolinux/initrd.img
 	mkisofs \
 		-J -r \
 		-hide-rr-moved \
