--- a/Makefile.inner
+++ b/Makefile.inner
@@ -24,6 +24,10 @@ $(STAGE_DIR)/cd/isolinux/isolinux.bin: /usr/share/syslinux/isolinux.bin
 	mkdir -p $(shell dirname $@)
 	cp -f $< $@
 
+$(STAGE_DIR)/cd/isolinux/isolinux.cfg: isolinux.cfg
+	mkdir -p $(shell dirname $@)
+	cp -f $< $@
+
 $(STAGE_DIR)/cd/isolinux/vmlinuz: /boot/vmlinuz-$(KVER)
 	mkdir -p $(shell dirname $@)
 	cp -f $< $@
@@ -32,7 +36,7 @@ $(STAGE_DIR)/cd/isolinux/initrd.img:
 	mkdir -p $(shell dirname $@)
 	dracut --kver $(KVER) --force --no-hostonly -v --add "dmsquash-live systemd network" "$@"
 
-$(STAGE_DIR)/cd.iso: $(STAGE_DIR)/cd/isolinux/isolinux.bin $(STAGE_DIR)/cd/LiveOS/squashfs.img $(STAGE_DIR)/cd/isolinux/vmlinuz $(STAGE_DIR)/cd/isolinux/initrd.img
+$(STAGE_DIR)/cd.iso: $(STAGE_DIR)/cd/isolinux/isolinux.bin $(STAGE_DIR)/cd/isolinux/isolinux.cfg $(STAGE_DIR)/cd/LiveOS/squashfs.img $(STAGE_DIR)/cd/isolinux/vmlinuz $(STAGE_DIR)/cd/isolinux/initrd.img
 	mkisofs \
 		-J -r \
 		-hide-rr-moved \
