Add: stage1 installer
This deploys the LiveOS image to a hard drive (create
partitions, filesystems, install extlinux).

The installer script is placed in the LiveOS directory
such that the development cycle is shorter (only
the ISO needs to be rebuilt).  Can be run with e.g.:

/run/initramfs/live/LiveOS/inst-stage1 /dev/disk/by-id/ata-QEMU_HARDDISK_QM00001

--- a/Dockerfile.live
+++ b/Dockerfile.live
@@ -2,3 +2,16 @@ FROM centos-deploy-base
 
 RUN echo root:root | chpasswd
 RUN : > /etc/fstab
+
+RUN yum -y install \
+	e2fsprogs \
+	syslinux-extlinux \
+	NetworkManager \
+	grub \
+	iproute \
+	less \
+	newt \
+	rsync \
+	openssh-clients \
+	openssh-server \
+	&& yum clean all
