--- a/Makefile.inner
+++ b/Makefile.inner
@@ -20,6 +20,10 @@ $(STAGE_DIR)/cd/LiveOS/squashfs.img: $(STAGE_DIR)/squash/LiveOS/ext3fs.img
 	mkdir -p $(shell dirname $@)
 	mksquashfs $(STAGE_DIR)/squash $@
 
+$(STAGE_DIR)/cd/LiveOS/inst-stage1: inst-stage1
+	mkdir -p $(shell dirname $@)
+	cp -f $< $@
+
 $(STAGE_DIR)/cd/isolinux/isolinux.bin: /usr/share/syslinux/isolinux.bin
 	mkdir -p $(shell dirname $@)
 	cp -f $< $@
@@ -36,7 +40,13 @@ $(STAGE_DIR)/cd/isolinux/initrd.img:
 	mkdir -p $(shell dirname $@)
 	dracut --kver $(KVER) --force --no-hostonly -v --add "dmsquash-live systemd network" "$@"
 
-$(STAGE_DIR)/cd.iso: $(STAGE_DIR)/cd/isolinux/isolinux.bin $(STAGE_DIR)/cd/isolinux/isolinux.cfg $(STAGE_DIR)/cd/LiveOS/squashfs.img $(STAGE_DIR)/cd/isolinux/vmlinuz $(STAGE_DIR)/cd/isolinux/initrd.img
+$(STAGE_DIR)/cd.iso: \
+		$(STAGE_DIR)/cd/isolinux/isolinux.bin \
+		$(STAGE_DIR)/cd/isolinux/isolinux.cfg \
+		$(STAGE_DIR)/cd/LiveOS/squashfs.img \
+		$(STAGE_DIR)/cd/LiveOS/inst-stage1 \
+		$(STAGE_DIR)/cd/isolinux/vmlinuz \
+		$(STAGE_DIR)/cd/isolinux/initrd.img
 	mkisofs \
 		-J -r \
 		-hide-rr-moved \
