--- a/isolinux.cfg
+++ b/isolinux.cfg
@@ -1,7 +1,8 @@
+serial 0 115200
 default linux
 timeout 50
 prompt 1
 label linux
   menu label ^Start live image
   kernel vmlinuz
-  append initrd=initrd.img root=live:CDLABEL=live-img rootfstype=auto ro rd.live.image rd.luks=0 rd.md=0 rd.dm=0
+  append initrd=initrd.img root=live:CDLABEL=live-img rootfstype=auto ro rd.live.image rd.luks=0 rd.md=0 rd.dm=0 console=tty1 console=ttyS0,115200
