Add: stage2 install
This copies the base LiveOS image as a standard ext4
filesystem.

--- a/Dockerfile.live
+++ b/Dockerfile.live
@@ -4,10 +4,11 @@ RUN echo root:root | chpasswd
 RUN : > /etc/fstab
 
 RUN yum -y install \
+	kernel \
+	grub2-pc \
 	e2fsprogs \
 	syslinux-extlinux \
 	NetworkManager \
-	grub \
 	iproute \
 	less \
 	newt \
